--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,7 @@ scraper:
     expression: 0 30 6 ? * * # I want this to run every morning at 6:30
     timezone:  # Blank string gives device's default timezone
   numberOfDays: 3 # Number of days to run report on, 3 means today, tomorrow, and the next day
+mqtt:
+  broker:
+    address: tcp://192.168.1.121
+    port: 1883
