--- a/node_project/package.json
+++ b/node_project/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "puppeteer": "^13.5.2",
-    "stack": "^0.1.0"
+    "discord-webhook-node": "^1.1.8",
+    "puppeteer": "^13.5.2"
   }
 }
