--- a/node_project/package.json
+++ b/node_project/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "discord-webhook-node": "^1.1.8",
     "mqtt": "^4.3.7",
-    "puppeteer": "^13.5.2"
+    "node-cron": "^3.0.0",
+    "puppeteer": "^13.5.2",
+    "winston": "^3.7.2"
   }
 }
