--- a/node_project/package.json
+++ b/node_project/package.json
@@ -14,6 +14,7 @@
     "mqtt": "^4.3.7",
     "node-cron": "^3.0.0",
     "puppeteer": "^13.5.2",
-    "winston": "^3.7.2"
+    "winston": "^3.7.2",
+    "yaml": "^2.0.1"
   }
 }
