--- a/node_project/config.yml
+++ b/node_project/config.yml
@@ -4,6 +4,10 @@ timezone: America/New_York
 timeout: 30000
 cronExpression: '0 2 * * *'
 maxTries: 10
+frigate:
+  host: 192.168.1.121
+  port: 5000
 snapshot:
+  path: clips/
+  temp: config/snapshots/
   retries: 5
-  sleep: 3
