Added per-room nightly occupancy sensors.

--- a/node_project/mqttConfig.json
+++ b/node_project/mqttConfig.json
@@ -48,6 +48,29 @@
           "payload_available": "ONLINE"
         }
       }
+    },
+    {
+      "name": "occupancy roomname",
+      "registerTopic": "homeassistant/binary_sensor/occupancy_roomname/config",
+      "registerMessage": {
+        "name": "occupancy roomname",
+        "unique_id": "occupancy_roomname_01",
+        "state_topic": "homeassistant/binary_sensor/occupancy_roomname/state",
+        "state_on": "ON",
+        "state_off": "OFF",
+        "device": {
+          "model": "1.0.0",
+          "identifiers": "bookitnow",
+          "name": "Book-it-now",
+          "manufacturer": "Allen Archer",
+          "via_device": "bookitnow"
+        },
+        "availability": {
+          "topic": "homeassistant/binary_sensor/occupancy_roomname/available",
+          "payload_not_available": "OFFLINE",
+          "payload_available": "ONLINE"
+        }
+      }
     }
   ]
 }
