--- a/node_project/package.json
+++ b/node_project/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "discord-webhook-node": "^1.1.8",
     "discord.js": "^13.7.0",
+    "express": "^4.18.1",
     "mqtt": "^4.3.7",
     "node-cron": "^3.0.0",
     "puppeteer": "^13.5.2",
