--- a/node_project/package.json
+++ b/node_project/package.json
@@ -13,6 +13,7 @@
     "discord-webhook-node": "^1.1.8",
     "discord.js": "^13.7.0",
     "express": "^4.18.1",
+    "imap": "^0.8.19",
     "mqtt": "^4.3.7",
     "node-cron": "^3.0.0",
     "puppeteer": "^13.5.2",
