Added attribute to each room occupancy to drive automations based on if the room is checking in today or not.

--- a/node_project/mqttConfig.json
+++ b/node_project/mqttConfig.json
@@ -69,7 +69,8 @@
           "topic": "homeassistant/binary_sensor/occupancy_roomname/available",
           "payload_not_available": "OFFLINE",
           "payload_available": "ONLINE"
-        }
+        },
+        "json_attributes_topic": "homeassistant/sensor/occupancy_roomname/state"
       }
     },
     {
