--- a/node_project/package.json
+++ b/node_project/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord-webhook-node": "^1.1.8",
+    "@tycrek/discord-hookr": "^0.1.0",
     "discord.js": "^13.7.0",
     "express": "^4.18.1",
     "imap": "^0.8.19",
