--- a/node_project/package.json
+++ b/node_project/package.json
@@ -9,13 +9,16 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "@tycrek/discord-hookr": "^0.1.0",
     "discord.js": "^13.7.0",
     "express": "^4.18.1",
+    "fetch": "^1.1.0",
     "imap": "^0.8.19",
     "mqtt": "^4.3.7",
     "node-cron": "^3.0.0",
+    "node-fetch": "^3.3.2",
     "puppeteer": "^13.5.2",
     "winston": "^3.7.2",
     "yaml": "^2.0.1"
