--- a/mqttConfig.json
+++ b/mqttConfig.json
@@ -1,101 +1,22 @@
 {
-  "otherAddress": "tcp://172.17.0.4",
   "address": "tcp://192.168.1.105",
   "maxRetries": "3",
   "devices": [
     {
-      "name": "Evening Guests",
-      "registerTopic": "homeassistant/binary_sensor/evening_guests/config",
-      "registerMessage": {
-        "name": "Evening Guests",
-        "unique_id": "evening_guests_01",
-        "state_topic": "homeassistant/binary_sensor/evening_guests/state",
-        "state_on": "ON",
-        "state_off": "OFF",
-        "device": {
-          "model": "1.0.0",
-          "identifiers": "bookitnow",
-          "name": "Book-it-now",
-          "manufacturer": "Allen Archer",
-          "via_device": "bookitnow"
-        },
-        "availability": {
-          "topic": "homeassistant/binary_sensor/evening_guests/available",
-          "payload_not_available": "OFFLINE",
-          "payload_available": "ONLINE"
-        }
-      }
+      "name": "evening guests",
+      "topic": "scraper/evening_guests"
     },
     {
-      "name": "Breakfast Guests",
-      "registerTopic": "homeassistant/binary_sensor/breakfast_guests/config",
-      "registerMessage": {
-        "name": "Breakfast Guests",
-        "unique_id": "breakfast_guests_01",
-        "state_topic": "homeassistant/binary_sensor/breakfast_guests/state",
-        "state_on": "ON",
-        "state_off": "OFF",
-        "device": {
-          "model": "1.0.0",
-          "identifiers": "bookitnow",
-          "name": "Book-it-now",
-          "manufacturer": "Allen Archer",
-          "via_device": "bookitnow"
-        },
-        "availability": {
-          "topic": "homeassistant/binary_sensor/breakfast_guests/available",
-          "payload_not_available": "OFFLINE",
-          "payload_available": "ONLINE"
-        }
-      }
+      "name": "breakfast guests",
+      "topic": "scraper/breakfast_guests"
     },
     {
       "name": "occupancy roomname",
-      "registerTopic": "homeassistant/sensor/occupancy_roomname/config",
-      "registerMessage": {
-        "name": "occupancy roomname",
-        "unique_id": "occupancy_roomname_01",
-        "state_topic": "homeassistant/sensor/occupancy_roomname/state",
-        "state_on": "ON",
-        "state_off": "OFF",
-        "device": {
-          "model": "1.0.0",
-          "identifiers": "bookitnow",
-          "name": "Book-it-now",
-          "manufacturer": "Allen Archer",
-          "via_device": "bookitnow"
-        },
-        "availability": {
-          "topic": "homeassistant/sensor/occupancy_roomname/available",
-          "payload_not_available": "OFFLINE",
-          "payload_available": "ONLINE"
-        },
-        "json_attributes_topic": "homeassistant/sensor/occupancy_roomname/state"
-      }
+      "topic": "scraper/occupancy_roomname"
     },
     {
       "name": "occupancy phone numbers",
-      "registerTopic": "homeassistant/sensor/occupancy_phone_numbers/config",
-      "registerMessage": {
-        "name": "occupancy phone numbers",
-        "unique_id": "occupancy_phone_numbers_01",
-        "state_topic": "homeassistant/sensor/occupancy_phone_numbers/state",
-        "state_on": "ON",
-        "state_off": "OFF",
-        "device": {
-          "model": "1.0.0",
-          "identifiers": "bookitnow",
-          "name": "Book-it-now",
-          "manufacturer": "Allen Archer",
-          "via_device": "bookitnow"
-        },
-        "availability": {
-          "topic": "homeassistant/sensor/occupancy_phone_numbers/available",
-          "payload_not_available": "OFFLINE",
-          "payload_available": "ONLINE"
-        },
-        "json_attributes_topic": "homeassistant/sensor/occupancy_phone_numbers/state"
-      }
+      "topic": "scraper/occupancy_phone_numbers"
     }
   ]
 }
