--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,4 +24,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: user/app:latest
+          tags: chunkystyles/reservationsScraper:latest
