Added CI action.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,4 +24,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: chunkystyles/reservationsscraper:latest
+          tags: ghcr.io/chunkystyles/reservationsscraper:latest
